# sogou-tr-simple

./: README.md  package.json  pyproject.toml  pyrightconfig.json
.github/workflows/: routine-tests.yml
sogou_tr/: sogout_tr.py
tests/: test_sogou_tr.py
