[tool.poetry]
name = "sogou-tr"
version = "0.1.0"
description = "sogou translate no frills"
authors = ["freemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/sogou-tr-simple"

[tool.poetry.dependencies]
python = "^3.7"
logzero = "^1.7.0"
httpx = "^0.17.1"
langid = "^1.1.6"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
tbump = "^6.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
